// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Cta variant with icon renders correctly 1`] = `
<a
  aria-label="Read more about the CTA link component"
  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
  href="/example"
>
  <span
    class="ecl-link__label"
  >
    Call to action link
  </span>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#corner-arrow"
    />
  </svg>
</a>
`;

exports[`Link Default renders correctly 1`] = `
<a
  aria-label="Read more about the European Union"
  class="ecl-link"
  href="/example"
>
  The European Union
</a>
`;

exports[`Link Standalone renders correctly 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone"
  href="/example"
>
  Standalone link
</a>
`;

exports[`Link Standalone with missing icon name renders correctly 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone"
  href="/example"
>
  Standalone link with icon
</a>
`;

exports[`Link With icon after renders correctly 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  href="/example"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
</a>
`;

exports[`Link With icon after renders correctly with extra attributes 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  href="/example"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
</a>
`;

exports[`Link With icon after renders correctly with extra class names 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after custom-class custom-class--test"
  href="/example"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
</a>
`;

exports[`Link With icon before renders correctly 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
  href="/example"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;

exports[`Link With two icons after renders correctly 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  href="/example"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#download"
    />
  </svg>
</a>
`;

exports[`Link With two icons after renders correctly with extra class names 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone custom-class custom-class--test"
  href="/example"
>
  Standalone link
</a>
`;

exports[`Link With two icons before renders correctly 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
  href="/example"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#download"
    />
  </svg>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;

exports[`Link With two icons before renders correctly with extra class names 1`] = `
<a
  aria-label="Read more about the Standalone link"
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before custom-class custom-class--test"
  href="/example"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#download"
    />
  </svg>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;
